--- a/myprojects.html
+++ b/myprojects.html
@@ -31,7 +31,9 @@
         <p>This system allows users to borrow, search, return books or magazines, and manage library records.</p>
         <p><strong>Technologies used:</strong> C++, Qt Creator, File I/O</p>
         <p><strong>Demo Video:</strong> 
-          <a href="library system.mp4" target="_blank">Watch Demo</a>
+  <source src="https://raw.githubusercontent.com/Sherolroses/my-portfolio/main/Library%20system.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
         </p>
       </div>
 
