--- a/myprojects.html
+++ b/myprojects.html
@@ -31,10 +31,7 @@
         <p>This system allows users to borrow, search, return books or magazines, and manage library records.</p>
         <p><strong>Technologies used:</strong> C++, Qt Creator, File I/O</p>
         <p><strong>Demo Video:</strong> 
-  <video width="400" controls>
-  <source src="https://raw.githubusercontent.com/Sherolroses/my-portfolio/main/Library%20system.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
+  <a href="Library system.mp4" target="_blank">view Demo</a>
         </p>
       </div>
 
